2008-05-01  Dan Winship  <danw@gnome.org>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18490
        Add mostly-working file: support and mostly-broken ftp: support to
        the soup backend.

        * platform/network/soup/ResourceHandleSoup.cpp (start): after
        doing basic checks, delegate to one of three submethods
        (startData): handles data: URLs
        (startHttp): handles http: and https: URLs, via libsoup
        (startGio, etc): handles file: and ftp: URLs, via gio. Lots of
        FIXMEs detailing the parts that don't fully work yet.

        * platform/network/ResourceHandle.h:
        * platform/network/ResourceHandleInternal.h: add new member
        variables for gio-based loading


Canonical link: https://commits.webkit.org/26014@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32761 268f45cc-cd09-0410-ab3c-d52691b4dbfc